@@ -13,6 +13,7 @@
 
 <%block name="page_header_col">
     <h2>Object Log</h2>
+    ${admin_partials.handle_querystring_result()}
 </%block>
 
 
